# Rayfield-x5t-EnergyAI

./: data-cleanup.ipynb  pyproject.toml  requirements.txt  setup.py  training_data.csv
.devcontainer/: devcontainer.json
energy_app/: Home.py  settings.py
energy_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
energy_app/components/: charts.py  upload.py
energy_app/pages/Broader workflows/: 1_Visualise.py  2_Forecast.py
energy_app/pages/Broader_workflows/: 2_Forecast.py
energy_app/pages/Localized workflows/: streamlit_app.py
energy_app/pages/Localized_workflows/: streamlit_app.py
energy_app/pages/tmp/: 1_Visualise.py
energy_app/utils/: chat.py  feature_engineering.py  loaders.py  logging.py  predictors.py  preprocess.py  summariser.py  zapier.py
energy_app/utils/task_engineering/: anomaly.py  classification.py  dimensionality.py  forecast.py
models/: anomaly_detection.pkl  classification.pkl  dimensionality_reduction.pkl  geothermal.pkl  hydro.pkl  logistic_regression.pkl  solar.pkl  waste.pkl  wind.pkl  wood.pkl
notebooks/: 02_classification_regression.ipynb  03_anomaly_detection.ipynb  04_dimensionality_reduction.ipynb
notebooks/forecastingv2/: geothermal.ipynb  hydro.ipynb  solar.ipynb  waste.ipynb  wind.ipynb  wood.ipynb
notebooks/models/: classification.pkl
scripts/: smoke_test.py
